--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -11,9 +11,9 @@
 
 //Main Color Variables
 $main-color: #870052;//Changed from f7691f
-$dark-color: #ea281f; //Link Color
-$light-color: #f4e00c; //Selected Header BG Color, ie. calendar        ***Custom, not from palette***
-$bg-color: #f7fe81; //Selected Content BG Color, ie. calendar          ***Custom, not from palette***
+$dark-color: #870052; //Link Color Changed from ea281f
+$light-color: #870052; //Selected Header BG Color, ie. calendar        ***Custom, not from palette*** Changed from f4e00c
+$bg-color: #870052; //Selected Content BG Color, ie. calendar          ***Custom, not from palette*** Changed from f7fe81
 
 //Main BG Color Variables
 $main-bg: #822537;
