--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -16,14 +16,14 @@ $light-color: #870052; //Selected Header BG Color, ie. calendar        ***Custom
 $bg-color: #870052; //Selected Content BG Color, ie. calendar          ***Custom, not from palette*** Changed from f7fe81
 
 //Main BG Color Variables
-$main-bg: #666666; //Changed from 822537
-$main-bg-60: lighten($main-bg, 18.5%); //Main Border/HR Color
-$main-bg-25: lighten($main-bg, 25%); 
+$main-bg: #870052; //Changed from 822537
+//$main-bg-60: lighten($main-bg, 18.5%); //Main Border/HR Color
+//$main-bg-25: lighten($main-bg, 25%); 
 
 //Secondary Color Variables
 $secondary: #870052;//Changed from b5a4b7
-$secondary-50: lighten($secondary, 9%);
-$secondary-25: lighten($secondary, 20%); //Important Heading BG Color 
+//$secondary-50: lighten($secondary, 9%);
+//$secondary-25: lighten($secondary, 20%); //Important Heading BG Color 
 
 //Gray Color Variables
 $gray: #3f3f3f; //Main Text Color
