--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -10,10 +10,10 @@
 //-----------------
 
 //Main Color Variables
-$main-color: #870052;//Changed from f7691f
-$dark-color: #870052; //Link Color Changed from ea281f
-$light-color: #870052; //Selected Header BG Color, ie. calendar        ***Custom, not from palette*** Changed from f4e00c
-$bg-color: #870052; //Selected Content BG Color, ie. calendar          ***Custom, not from palette*** Changed from f7fe81
+$main-color: #ffffff;//Changed from f7691f
+$dark-color: #ffffff; //Link Color Changed from ea281f
+$light-color: #ffffff; //Selected Header BG Color, ie. calendar        ***Custom, not from palette*** Changed from f4e00c
+$bg-color: #ffffff; //Selected Content BG Color, ie. calendar          ***Custom, not from palette*** Changed from f7fe81
 
 //Main BG Color Variables
 $main-bg: #870052; //Changed from 822537
