--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -26,12 +26,12 @@ $secondary-50: lighten($secondary, 1%); //9%
 $secondary-25: lighten($secondary, 1%); //Important Heading BG Color 20%
 
 //Gray Color Variables
-$gray: #3f3f3f; //Main Text Color
-$gray-75: lighten($gray, 18.25%); //Lighter Text Color
+$gray: #ffffff; //Main Text Color Changed from 3f3f3f
+$gray-75: lighten($gray, 1%); //Lighter Text Color 18.25%
 
-$gray-3: #e9e9e9; //Block/Course BG Color
-$gray-2: #f2f2f2;
-$gray-1: #fbfbfb; //Main BG Color
+$gray-3: #e9e9e9; //Block/Course BG Color Changed from e9e9e9
+$gray-2: #f2f2f2; //Changed from f2f2f2
+$gray-1: #666666; //Main BG Color Changed from fbfbfb
 $white: $gray-1;
 
 $black: #2e2e2e;
