--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -54,7 +54,7 @@ $serif: $theme-serif-font, $serif;
 
 
 //-----------------
-//  Theme Element Assignments
+//  Theme Element 
 //-----------------
 
 $body-bg: $gray-1;
