--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -23,7 +23,7 @@ $main-bg-25: lighten($main-bg, 0.1%);  //25%
 //Secondary Color Variables
 $secondary: #870052;//Changed from b5a4b7
 $secondary-50: lighten($secondary, 0.1%); //9%
-$secondary-25: lighten($secondary, 0.1%); //Important Heading BG Color 20%
+$secondary-25: #232323; //lighten($secondary, 0.1%); //Important Heading BG Color 20%
 
 //Gray Color Variables
 $gray: #ffffff; //Main Text Color Changed from 3f3f3f
