--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -11,7 +11,7 @@
 
 //Main Color Variables
 $main-color: #ffffff;//Changed from f7691f
-$dark-color: #ffffff; //Link Color Changed from ea281f
+$dark-color: #FF0000; //Link Color Changed from ea281f
 $light-color: #ffffff; //Selected Header BG Color, ie. calendar        ***Custom, not from palette*** Changed from f4e00c
 $bg-color: #ffffff; //Selected Content BG Color, ie. calendar          ***Custom, not from palette*** Changed from f7fe81
 
