--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -86,7 +86,7 @@ $link-color-d1: #FFCC00; //$dark-color; Yellow color
 $link-hover: $light-color;
 $site-status-color: $bg-color;
 
-$header-graphic-super-color: $dark-color;
+$header-graphic-super-color: #A97D5D; //$dark-color; kafe 
 $header-graphic-sub-color: $lighter-base-font-color;
 
 $header-link-color: #99FF00; //$dark-color; Prasino
@@ -112,7 +112,7 @@ $action-primary-focused-bg: #3333FF; //$dark-color; blue
 $action-primary-focused-fg: $gray-1;
 
 // current or active navigation item
-$action-primary-active-bg: $dark-color;
+$action-primary-active-bg: #996699; //$dark-color; mwv
 $action-primary-active-fg: $gray-1;
 $action-primary-active-shadow: none;
 $action-primary-active-focused-fg: $gray-2;
