--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -81,7 +81,7 @@ $base-font-color: $black;
 $lighter-base-font-color: $black-80;
 $very-light-text: $gray-1;
 
-$link-color: $gray-3; //$dark-color;
+$link-color: #585858; //$dark-color;
 $link-color-d1: #870052; //$dark-color; Agree with terms and conditions
 $link-hover: $light-color;
 $site-status-color: $bg-color;
