--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -112,8 +112,8 @@ $action-primary-focused-bg: #870052; //$dark-color; KI color sto login kai creat
 $action-primary-focused-fg: $gray-1;
 
 // current or active navigation item
-$action-primary-active-bg: $dark-color; 
-$action-primary-active-fg: $gray-1;
+$action-primary-active-bg: #ffffff; //$dark-color; 
+$action-primary-active-fg: #ffffff; //$gray-1;
 $action-primary-active-shadow: none;
 $action-primary-active-focused-fg: #ffffff; //$gray-2;
 $action-primary-active-focused-shadow: none;
