--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -99,8 +99,8 @@ $shadow-color: $gray;
 
 // actions
 $button-bg-image: none;
-$button-bg-color: $gray-3;
-$button-bg-hover-color: $gray-1;
+$button-bg-color: #ffffff; //$gray-3;
+$button-bg-hover-color: #ffffff; //$gray-1;
 
 // actions - primary
 $action-primary-bg: $main-color;
