--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -92,15 +92,15 @@ $header-graphic-sub-color: $lighter-base-font-color;
 $header-link-color: #ffffff; //$dark-color; Prasino
 $header-link-hover: $light-color;
 
-$button-color: transparentize($main-color, .9);//$main-color;
-$button-archive-color: $gray-3;
+$button-color: transparentize(#232323;, .9);//$main-color;
+$button-archive-color: #232323; //$gray-3;
 
 $shadow-color: $gray;
 
 // actions
 $button-bg-image: none;
-$button-bg-color: #ffffff; //$gray-3;
-$button-bg-hover-color: #ffffff; //$gray-1;
+$button-bg-color: #232323; //$gray-3;
+$button-bg-hover-color: #232323; //$gray-1;
 
 // actions - primary
 $action-primary-bg: $main-color;
