--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -92,7 +92,7 @@ $header-graphic-sub-color: $lighter-base-font-color;
 $header-link-color: #ffffff; //$dark-color; Prasino
 $header-link-hover: $light-color;
 
-$button-color: transparentize(#232323;, .9);//$main-color;
+$button-color: transparentize(#232323, .9);//$main-color;
 $button-archive-color: #232323; //$gray-3;
 
 $shadow-color: $gray;
