--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -92,15 +92,15 @@ $header-graphic-sub-color: $lighter-base-font-color;
 $header-link-color: #ffffff; //$dark-color; Prasino
 $header-link-hover: $light-color;
 
-$button-color: transparentize(#232323, .9);//$main-color;
-$button-archive-color: #232323; //$gray-3;
+$button-color: transparentize($main-color, .9);//$main-color;
+$button-archive-color: $gray-3;
 
 $shadow-color: $gray;
 
 // actions
 $button-bg-image: none;
-$button-bg-color: #232323; //$gray-3;
-$button-bg-hover-color: #232323; //$gray-1;
+$button-bg-color: $gray-3;
+$button-bg-hover-color: $gray-1;
 
 // actions - primary
 $action-primary-bg: $main-color;
@@ -112,10 +112,10 @@ $action-primary-focused-bg: #870052; //$dark-color; KI color sto login kai creat
 $action-primary-focused-fg: $gray-1;
 
 // current or active navigation item
-$action-primary-active-bg: #ffffff; //$dark-color; 
-$action-primary-active-fg: #ffffff; //$gray-1;
+$action-primary-active-bg: $dark-color; 
+$action-primary-active-fg: $gray-1;
 $action-primary-active-shadow: none;
-$action-primary-active-focused-fg: #ffffff; //$gray-2;
+$action-primary-active-focused-fg: $gray-2;
 $action-primary-active-focused-shadow: none;
 
 // disabled
