--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -146,10 +146,10 @@ $action-secondary-disabled-fg: $gray;
 
 //
 
-$border-color-1: #36C529; //$main-bg-60;
-$border-color-2: #36C529; //$main-bg-60;
-$border-color-3: #36C529; //$main-bg-60;
-$outer-border-color: #36C529; //$main-bg-60;
+$border-color-1: $main-bg-60; //Borders in different blocks/boxes
+$border-color-2: $main-bg-60; //Borders in different blocks/boxes
+$border-color-3: $main-bg-60; //Borders in different blocks/boxes
+$outer-border-color: $main-bg-60; //Borders in different blocks/boxes
 
 $sidebar-color: $gray-1;
 
@@ -166,7 +166,7 @@ $course-bg-image: none;
 $account-content-wrapper-bg: $gray-1;
 
 $course-profile-bg: $gray-1;
-$course-header-bg: transparentize($gray-1, .1);
+$course-header-bg: transparentize($gray-1, .9);
 
 $sidebar-chapter-bg-top: transparentize($gray-1, .3);
 $sidebar-chapter-bg-bottom: transparentize($gray-1, .9);
