--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -125,13 +125,13 @@ $action-prmary-disabled-fg: $gray-1;
 
 
 // actions - secondary
-$action-secondary-bg: $secondary;
-$action-secondary-fg: $gray;
+$action-secondary-bg: #FDE000; //$secondary;
+$action-secondary-fg: #FDE000; //$gray;
 $action-secondary-shadow: none;
 
 // focused - hover/active pseudo states
-$action-secondary-focused-bg: $secondary-50;
-$action-secondary-focused-fg: $gray;
+$action-secondary-focused-bg: #FDE000; //$secondary-50;
+$action-secondary-focused-fg: #FDE000; //$gray;
 
 // current or active navigation item
 $action-secondary-active-bg: $secondary-50;
