--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -125,19 +125,19 @@ $action-prmary-disabled-fg: $gray-1;
 
 
 // actions - secondary
-$action-secondary-bg: #FDE000; //$secondary;
-$action-secondary-fg: #FDE000; //$gray;
+$action-secondary-bg: $secondary;
+$action-secondary-fg: $gray;
 $action-secondary-shadow: none;
 
 // focused - hover/active pseudo states
-$action-secondary-focused-bg: #FDE000; //$secondary-50;
-$action-secondary-focused-fg: #FDE000; //$gray;
+$action-secondary-focused-bg: $secondary-50;
+$action-secondary-focused-fg: $gray;
 
 // current or active navigation item
-$action-secondary-active-bg: $secondary-50;
-$action-secondary-active-fg: $gray;
+$action-secondary-active-bg: #FDE000; //$secondary-50;
+$action-secondary-active-fg: #FDE000; //$gray;
 $action-secondary-active-shadow: none;
-$action-secondary-active-focused-fg: $gray-75;
+$action-secondary-active-focused-fg: #FDE000; //$gray-75;
 $action-secondary-active-focused-shadow: none;
 
 // disabled
