--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -146,10 +146,10 @@ $action-secondary-disabled-fg: $gray;
 
 //
 
-$border-color-1: $main-bg-60; //Borders in different blocks/boxes
-$border-color-2: $main-bg-60; //Borders in different blocks/boxes
-$border-color-3: $main-bg-60; //Borders in different blocks/boxes
-$outer-border-color: $main-bg-60; //Borders in different blocks/boxes
+//$border-color-1: $main-bg-60; Borders in different blocks/boxes
+//$border-color-2: $main-bg-60; Borders in different blocks/boxes
+//$border-color-3: $main-bg-60; Borders in different blocks/boxes
+//$outer-border-color: $main-bg-60; Borders in different blocks/boxes
 
 $sidebar-color: $gray-1;
 
