--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -17,7 +17,7 @@ $bg-color: #ffffff; //Selected Content BG Color, ie. calendar          ***Custom
 
 //Main BG Color Variables
 $main-bg: #232323; //Changed from 822537
-$main-bg-60: lighten($main-bg, 0.1%); //Main Border/HR Color 18.5%
+$main-bg-60: $main-bg; //Main Border/HR Color 18.5%
 $main-bg-25: lighten($main-bg, 0.1%);  //25% 
 
 //Secondary Color Variables
