--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -77,8 +77,8 @@ $faded-hr-image-4: linear-gradient($main-bg-60 0%, $main-bg-60);
 $faded-hr-image-5: linear-gradient($main-bg-60 0%, $main-bg-60);
 $faded-hr-image-6: linear-gradient($main-bg-60 0%, $main-bg-60);
 
-$base-font-color: $black;
-$lighter-base-font-color: $black-80;
+$base-font-color: #ffffff; //$black;
+$lighter-base-font-color: #ffffff; //$black-80;
 $very-light-text: #ffffff; //$gray-1;
 
 $link-color: #585858; //$dark-color;
