--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -157,9 +157,9 @@ $homepage__header--gradient__color--alpha: $secondary-25;
 $homepage__header--gradient__color--bravo: $secondary-25;
 $homepage__header--background: $secondary-25;
 $dashboard-profile-header-image: none;
-$dashboard-profile-header-color: $secondary-25;
-$dashboard-profile-color: $gray-3;
-$dot-color: $main-bg-60;
+$dashboard-profile-header-color: #ffffff; //$secondary-25;
+$dashboard-profile-color: #ffffff; //$gray-3;
+$dot-color: #ffffff; //$main-bg-60;
 
 $course-bg-color: $gray-3;
 $course-bg-image: none;
