--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -62,38 +62,38 @@ $container-bg: $gray-1;
 $login-register-bg: $gray-1;
 $content-wrapper-bg: $gray-1;
 $header-image: none;
-$header-bg: transparentize(lighten($secondary, 0.5%), .05);//18.5% .25
+//*******$header-bg: transparentize(lighten($secondary, 0.5%), .05);//18.5% .25
 $courseware-header-image: none;
-$courseware-header-bg: transparentize(lighten($secondary, 18.5%), .25);
+//*******$courseware-header-bg: transparentize(lighten($secondary, 18.5%), .25);
 $footer-bg: #dddddd; //$secondary-25;
-$courseware-footer-border: 1px solid $main-bg-60;
-$courseware-footer-shadow: box-shadow(2px 1px 0 rgba(0, 0, 0, .1));
+//*******$courseware-footer-border: 1px solid $main-bg-60;
+//*******$courseware-footer-shadow: box-shadow(2px 1px 0 rgba(0, 0, 0, .1));
 $courseware-footer-margin: 50px;
 
-$faded-hr-image-1: linear-gradient($main-bg-60 0%, $main-bg-60);
-$faded-hr-image-2: linear-gradient($main-bg-60 0%, $main-bg-60);
-$faded-hr-image-3: linear-gradient($main-bg-60 0%, $main-bg-60);
-$faded-hr-image-4: linear-gradient($main-bg-60 0%, $main-bg-60);
-$faded-hr-image-5: linear-gradient($main-bg-60 0%, $main-bg-60);
-$faded-hr-image-6: linear-gradient($main-bg-60 0%, $main-bg-60);
+//*******$faded-hr-image-1: linear-gradient($main-bg-60 0%, $main-bg-60);
+//*******$faded-hr-image-2: linear-gradient($main-bg-60 0%, $main-bg-60);
+//*******$faded-hr-image-3: linear-gradient($main-bg-60 0%, $main-bg-60);
+//*******$faded-hr-image-4: linear-gradient($main-bg-60 0%, $main-bg-60);
+//*******$faded-hr-image-5: linear-gradient($main-bg-60 0%, $main-bg-60);
+//*******$faded-hr-image-6: linear-gradient($main-bg-60 0%, $main-bg-60);
 
-$base-font-color: $black;
-$lighter-base-font-color: black-80;
-$very-light-text: $gray-1;
+//*******$base-font-color: $black;
+//*******$lighter-base-font-color: black-80;
+//*******$very-light-text: $gray-1;
 
 $link-color: #585858; //$dark-color;
 $link-color-d1: #870052; //$dark-color; Agree with terms and conditions
-$link-hover: $light-color;
-$site-status-color: $bg-color;
+//*******$link-hover: $light-color;
+//*******$site-status-color: $bg-color;
 
 $header-graphic-super-color: #870052; //$dark-color; Welcome/Please login header 
-$header-graphic-sub-color: $lighter-base-font-color;
+//*******$header-graphic-sub-color: $lighter-base-font-color;
 
 $header-link-color: #ffffff; //$dark-color; Prasino
-$header-link-hover: $light-color;
+//*******$header-link-hover: $light-color;
 
 $button-color: transparentize(#232323, .5);//$main-color View course button in logged in dashboard
-$button-archive-color: $gray-3;
+//*******$button-archive-color: $gray-3;
 
 $shadow-color: $gray;
 
@@ -112,37 +112,37 @@ $action-primary-focused-bg: #870052; //$dark-color; KI color sto hover sta 1) Lo
 $action-primary-focused-fg: $gray-1;
 
 // current or active navigation item
-$action-primary-active-bg: $dark-color; 
-$action-primary-active-fg: $gray-1;
+//*******$action-primary-active-bg: $dark-color; 
+//*******$action-primary-active-fg: $gray-1;
 $action-primary-active-shadow: none;
-$action-primary-active-focused-fg: $gray-2;
+//*******$action-primary-active-focused-fg: $gray-2;
 $action-primary-active-focused-shadow: none;
 
 // disabled
-$action-primary-disabled-bg: $gray-75;
-$action-prmary-disabled-fg: $gray-1;
+//*******$action-primary-disabled-bg: $gray-75;
+//*******$action-prmary-disabled-fg: $gray-1;
 
 
 
 // actions - secondary
-$action-secondary-bg: $secondary;
-$action-secondary-fg: $gray;
+//*******$action-secondary-bg: $secondary;
+//*******$action-secondary-fg: $gray;
 $action-secondary-shadow: none;
 
 // focused - hover/active pseudo states
-$action-secondary-focused-bg: $secondary-50;
-$action-secondary-focused-fg: $gray;
+//*******$action-secondary-focused-bg: $secondary-50;
+//*******$action-secondary-focused-fg: $gray;
 
 // current or active navigation item
-$action-secondary-active-bg: $secondary-50;
-$action-secondary-active-fg: $gray;
+//*******$action-secondary-active-bg: $secondary-50;
+//*******$action-secondary-active-fg: $gray;
 $action-secondary-active-shadow: none;
-$action-secondary-active-focused-fg: $gray-75;
+//*******$action-secondary-active-focused-fg: $gray-75;
 $action-secondary-active-focused-shadow: none;
 
 // disabled
-$action-secondary-disabled-bg: $gray-3;
-$action-secondary-disabled-fg: $gray;
+//*******$action-secondary-disabled-bg: $gray-3;
+//*******$action-secondary-disabled-fg: $gray;
 
 //
 
@@ -151,30 +151,30 @@ $action-secondary-disabled-fg: $gray;
 //$border-color-3: $main-bg-60; Borders in different blocks/boxes
 //$outer-border-color: $main-bg-60; Borders in different blocks/boxes
 
-$sidebar-color: $gray-1;
+//*******$sidebar-color: $gray-1;
 
-$homepage__header--gradient__color--alpha: $secondary-25;
-$homepage__header--gradient__color--bravo: $secondary-25;
-$homepage__header--background: $secondary-25;
-$dashboard-profile-header-image: none;
-$dashboard-profile-header-color: $secondary-25;
-$dashboard-profile-color: $gray-3;
-$dot-color: $main-bg-60;
+//*******$homepage__header--gradient__color--alpha: $secondary-25;
+//*******$homepage__header--gradient__color--bravo: $secondary-25;
+//*******$homepage__header--background: $secondary-25;
+//*******$dashboard-profile-header-image: none;
+//*******$dashboard-profile-header-color: $secondary-25;
+//*******$dashboard-profile-color: $gray-3;
+//*******$dot-color: $main-bg-60;
 
-$course-bg-color: $gray-3;
+//*******$course-bg-color: $gray-3;
 $course-bg-image: none;
-$account-content-wrapper-bg: $gray-1;
+//*******$account-content-wrapper-bg: $gray-1;
 
-$course-profile-bg: $gray-1;
-$course-header-bg: transparentize($gray-1, .2);
+//*******$course-profile-bg: $gray-1;
+//*******$course-header-bg: transparentize($gray-1, .2);
 
-$sidebar-chapter-bg-top: transparentize($gray-1, .3);
-$sidebar-chapter-bg-bottom: transparentize($gray-1, .9);
-$sidebar-chapter-bg: $gray-2;
-$sidebar-active-image: $gray-3;
+//*******$sidebar-chapter-bg-top: transparentize($gray-1, .3);
+//*******$sidebar-chapter-bg-bottom: transparentize($gray-1, .9);
+//*******$sidebar-chapter-bg: $gray-2;
+//*******$sidebar-active-image: $gray-3;
 
-$form-bg-color: $gray-1;
-$modal-bg-color: $gray-1;
+//*******$form-bg-color: $gray-1;
+//*******$modal-bg-color: $gray-1;
 
 //TOP HEADER IMAGE MARGIN
 $header_image_margin: -77px;
