--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -95,7 +95,7 @@ $header-link-hover: $light-color;
 $button-color: transparentize(#232323, .5);//$main-color View course button in logged in dashboard
 $button-archive-color: $gray-3;
 
-//********$shadow-color: $gray;
+$shadow-color: $gray;
 
 // actions
 $button-bg-image: none; 
