--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -220,7 +220,7 @@ text-decoration:none;color:#ffffff
 }
 
 header.global .nav-global li.active a,header.global header.global-new .nav-courseware li.active a,header.global-new header.global .nav-courseware li.active a,header.global .nav-global div.active a,header.global header.global-new .nav-courseware div.active a,header.global-new header.global .nav-courseware div.active a{
-text-decoration:none;color:#585858
+text-decoration:none;color:#fbfbfb
 }
 
 header.global-new .nav-global li a,header.global-new .nav-courseware li a,header.global-new .nav-global div a,header.global-new .nav-courseware div a{
