--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -242,12 +242,12 @@ text-decoration:none;color:#ffffff
 border-color:#ffffff
 }
 
-header.global-new .nav-courseware div a.nav-courseware-button {
-  padding: 5px 45px 5px 45px;
-  border: 3px solid #870052;
-  border-radius: 5px;
-  margin-top: -22px;
-}
+//header.global-new .nav-courseware div a.nav-courseware-button {
+  //padding: 5px 45px 5px 45px;
+  //border: 3px solid #870052;
+  //border-radius: 5px;
+  //margin-top: -22px;
+//}
 
 .view-login header.global-new .nav-courseware div a.nav-courseware-button:hover,header.global-new .nav-courseware div a.nav-courseware-button:focus,header.global-new .nav-courseware div a.nav-courseware-button:active {
   border-color: #ffffff;  
