--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -262,3 +262,15 @@ header.global .nav-courseware li .cta,header.global .nav-courseware div .cta,.vi
 	background: #575757;
 	color: #f2f2f2;
 }
+
+.view-register header.global-new .cta-register {
+  text-decoration: none;
+  color: #ffffff;
+  border-bottom-color: transparent;
+}
+
+.view-login header.global-new .cta-login {
+  text-decoration: none;
+  color: #ffffff;
+}
+
