--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -283,3 +283,11 @@ header.global-new {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.1);
   background: rgba(138,0,84,0.95);
 }
+
+.home>header .outer-wrapper {
+    margin: 0 auto;
+    padding: 240px 10px 0px;
+    position: relative;
+    max-width: 1400px;
+    min-width: 760px;
+}
