--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -186,7 +186,7 @@ $footer_margin: ($baseline/4) 0;
 //  CSS BG Images
 //-----------------
 $homepage-bg-image: url('../themes/default/images/sunrise.jpg');
-$course_index_overlay_logo_file: url('../themes/default/static/images/edx_bw.png');
+//$course_index_overlay_logo_file: url('../themes/default/static/images/edx_bw.png');
 $login-banner-image: none;
 $register-banner-image: none;
 
