--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -1,7 +1,23 @@
+Skip to content
+ This repository
+Explore
+Gist
+Blog
+Help
+barfly87 barfly87
+ 
+1  Unwatch 
+  Star 0
+ Fork 40barfly87/edx-default-theme
+forked from Stanford-Online/edx-default-theme
+ branch: master  edx-default-theme / static / sass / _default.scss
+barfly87barfly87 18 days ago test
+1 contributor
+293 lines (230 sloc)  10.698 kb RawBlameHistory   
 /****************************************************************************************************
 *   KI theming File
 *
-*   Contains all the theme color definitions for the Stanford Open Source MOOC Project
+*   Contains all the theme color definitions for the KI Open Source MOOC Project
 *
 ****************************************************************************************************/
 
@@ -65,7 +81,7 @@ $header-image: none;
 $header-bg: transparentize(lighten($secondary, 0.5%), .05);//18.5% .25
 $courseware-header-image: none;
 $courseware-header-bg: transparentize(lighten($secondary, 18.5%), .25);
-$footer-bg: $secondary-25;
+$footer-bg: #dddddd; //$secondary-25;
 $courseware-footer-border: 1px solid $main-bg-60;
 $courseware-footer-shadow: box-shadow(2px 1px 0 rgba(0, 0, 0, .1));
 $courseware-footer-margin: 50px;
@@ -78,7 +94,7 @@ $faded-hr-image-5: linear-gradient($main-bg-60 0%, $main-bg-60);
 $faded-hr-image-6: linear-gradient($main-bg-60 0%, $main-bg-60);
 
 $base-font-color: $black;
-$lighter-base-font-color: $black-80;
+$lighter-base-font-color: black-80;
 $very-light-text: $gray-1;
 
 $link-color: #585858; //$dark-color;
@@ -92,27 +108,27 @@ $header-graphic-sub-color: $lighter-base-font-color;
 $header-link-color: #ffffff; //$dark-color; Prasino
 $header-link-hover: $light-color;
 
-$button-color: transparentize($main-color, .9);//$main-color;
+$button-color: transparentize(#232323, .5);//$main-color View course button in logged in dashboard
 $button-archive-color: $gray-3;
 
 $shadow-color: $gray;
 
 // actions
-$button-bg-image: none;
-$button-bg-color: $gray-3;
-$button-bg-hover-color: $gray-1;
+$button-bg-image: none; 
+$button-bg-color: $gray-3; //courseware buttons
+$button-bg-hover-color: $gray-1; //courseware buttons
 
 // actions - primary
-$action-primary-bg: $main-color;
+$action-primary-bg: #575757; //$main-color; gri color default sta 1) Log into My opened KI Account + Access My Courses kai 2) Create My opened KI Account buttons
 $action-primary-fg: $gray-2;
 $action-primary-shadow: none;
 
 // focused - hover/active pseudo states
-$action-primary-focused-bg: #870052; //$dark-color; KI color sto login kai create account button
+$action-primary-focused-bg: #870052; //$dark-color; KI color sto hover sta 1) Log into My opened KI Account + Access My Courses kai 2) Create My opened KI Account buttons
 $action-primary-focused-fg: $gray-1;
 
 // current or active navigation item
-$action-primary-active-bg: #ffffff; //$dark-color; mwv
+$action-primary-active-bg: $dark-color; 
 $action-primary-active-fg: $gray-1;
 $action-primary-active-shadow: none;
 $action-primary-active-focused-fg: $gray-2;
@@ -146,10 +162,10 @@ $action-secondary-disabled-fg: $gray;
 
 //
 
-$border-color-1: $main-bg-60;
-$border-color-2: $main-bg-60;
-$border-color-3: $main-bg-60;
-$outer-border-color: $main-bg-60;
+//$border-color-1: $main-bg-60; Borders in different blocks/boxes
+//$border-color-2: $main-bg-60; Borders in different blocks/boxes
+//$border-color-3: $main-bg-60; Borders in different blocks/boxes
+//$outer-border-color: $main-bg-60; Borders in different blocks/boxes
 
 $sidebar-color: $gray-1;
 
@@ -166,7 +182,7 @@ $course-bg-image: none;
 $account-content-wrapper-bg: $gray-1;
 
 $course-profile-bg: $gray-1;
-$course-header-bg: transparentize($gray-1, .1);
+$course-header-bg: transparentize($gray-1, .2);
 
 $sidebar-chapter-bg-top: transparentize($gray-1, .3);
 $sidebar-chapter-bg-bottom: transparentize($gray-1, .9);
@@ -185,8 +201,8 @@ $footer_margin: ($baseline/4) 0;
 //-----------------
 //  CSS BG Images
 //-----------------
-$homepage-bg-image: url('../themes/default/images/sunrise.jpg');
-
+$homepage-bg-image: url('../themes/default/static/images/sunrise.jpg');
+//$course_index_overlay_logo_file: url('../themes/default/static/images/edx_bw.png');
 $login-banner-image: none;
 $register-banner-image: none;
 
@@ -206,3 +222,90 @@ $video-thumb-url: '../themes/default/images/edx.png';
     margin: 0 !important;
     text-align: right;
 }
+
+header.global-new .nav-courseware div a.nav-courseware-button:hover,header.global-new .nav-courseware div a.nav-courseware-button:focus,header.global-new .nav-courseware div a.nav-courseware-button:active{
+	border-color:#ffffff;
+}
+
+header.global .nav-global li a,header.global header.global-new .nav-courseware li a,header.global-new header.global .nav-courseware li a,header.global .nav-global div a,header.global header.global-new .nav-courseware div a,header.global-new header.global .nav-courseware div a{
+	display:block;
+	padding:5px;
+	color:#ffffff;
+	font-weight:600;
+}
+
+header.global .nav-global li a:hover,header.global header.global-new .nav-courseware li a:hover,header.global-new header.global .nav-courseware li a:hover,header.global .nav-global li a:focus,header.global header.global-new .nav-courseware li a:focus,header.global-new header.global .nav-courseware li a:focus,header.global .nav-global li a:active,header.global header.global-new .nav-courseware li a:active,header.global-new header.global .nav-courseware li a:active,header.global .nav-global div a:hover,header.global header.global-new .nav-courseware div a:hover,header.global-new header.global .nav-courseware div a:hover,header.global .nav-global div a:focus,header.global header.global-new .nav-courseware div a:focus,header.global-new header.global .nav-courseware div a:focus,header.global .nav-global div a:active,header.global header.global-new .nav-courseware div a:active,header.global-new header.global .nav-courseware div a:active{
+	text-decoration:none;color:#ffffff;
+}
+
+header.global .nav-global li.active a,header.global header.global-new .nav-courseware li.active a,header.global-new header.global .nav-courseware li.active a,header.global .nav-global div.active a,header.global header.global-new .nav-courseware div.active a,header.global-new header.global .nav-courseware div.active a{
+	text-decoration:none;
+	color:#000000; //585858
+}
+
+header.global-new .nav-global li a,header.global-new .nav-courseware li a,header.global-new .nav-global div a,header.global-new .nav-courseware div a{
+	border-bottom:4px solid rgba(138,0,84,0.95);
+	display:block;
+	padding:5px;
+	font-size:18px;
+	padding-bottom:25px;
+	font-weight:600;
+	font-family:"Open Sans",Arial,Helvetica,sans-serif;
+	color:#ffffff;
+}
+
+header.global-new .nav-global li a:hover,header.global-new .nav-courseware li a:hover,header.global-new .nav-global li a:focus,header.global-new .nav-courseware li a:focus,header.global-new .nav-global div a:hover,header.global-new .nav-courseware div a:hover,header.global-new .nav-global div a:focus,header.global-new .nav-courseware div a:focus{
+	text-decoration:none;
+	color:#ffffff;
+}
+
+.view-login header.global-new .nav-courseware div a.nav-courseware-button:hover,header.global-new .nav-courseware div a.nav-courseware-button:focus,header.global-new .nav-courseware div a.nav-courseware-button:active{
+	border-color:#ffffff;
+}
+
+header.global-new .nav-courseware div a.nav-courseware-button {
+	padding: 5px 45px 5px 45px;
+	border: 3px solid transparent;
+	border-radius: 5px;
+	margin-top: -22px;
+}
+
+.view-login header.global-new .nav-courseware div a.nav-courseware-button:hover,header.global-new .nav-courseware div a.nav-courseware-button:focus,header.global-new .nav-courseware div a.nav-courseware-button:active {
+	border-color: #ffffff;  
+}
+
+header.global .nav-courseware li .cta,header.global .nav-courseware div .cta,.view-partial-mktgregister .action.action-register,.view-partial-mktgregister .action.access-courseware {
+	box-shadow: 0 2px 1px 0 none;
+	background: #575757;
+	color: #f2f2f2;
+}
+
+.view-register header.global-new .cta-register {
+  text-decoration: none;
+  color: #ffffff;
+  border-bottom-color: transparent;
+}
+
+.view-login header.global-new .cta-login {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+header.global-new {
+  position: relative;
+  height: 75px;
+  width: 100%;
+  border-bottom: 4px solid #2e2e2e;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.1);
+  background: rgba(138,0,84,0.95);
+}
+
+.home>header .outer-wrapper {
+    margin: 0 auto;
+    padding: 240px 10px 0px;
+    position: relative;
+    max-width: 1400px;
+    min-width: 760px;
+}
+Status API Training Shop Blog About
+© 2014 GitHub, Inc. Terms Privacy Security Contact
